@@ -5,6 +5,9 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
+- Fix a unicode bug when the RSS view is called on a news listing block
+  having umlauts in its title. [mbaechtold]
+
 - Fix a bug where the news portlet was shown when it shouldn't have
   been shown. [mbaechtold]
 
